Fixed footer
-to be presented on the bottom of the page if content is too small
-to be presented on the of the content if the content is too big

--- a/Laravel/public/css/app.css
+++ b/Laravel/public/css/app.css
@@ -77,7 +77,44 @@ body {
   color: #212529;
   text-align: left;
   background-color: #f8fafc;
+  height: 100%;
+  width: 100%;
 }
+
+.navbar{
+    width: 87%;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-start;
+  width: 100%;
+  min-height: 100dvh;
+  flex: 1 0 auto;
+}
+
+main > .content{
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-bottom: -7rem;
+    flex: 1 0 auto;
+}
+
+
+.container{
+    height: 100%;
+}
+
+footer {
+    flex-shrink: 0;
+}
+
 
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
